<resources>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exchanger">Exchanger</string>
    <string name="news">News</string>
    <string name="currency_selector">Currency Selector</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>
    <string name="amount_0_00">Amount (0.00)</string>
    <string name="azn">AZN</string>
    <string name="usd">USD</string>
    <string name="the_source_of_news">The source of news is fake news client</string>
</resources>