<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/default_padding"
    android:paddingTop="@dimen/default_padding"
    tools:context=".view.fragments.exchanger.ExchangerFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_base_amount"
        style="@style/AmountBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="@id/button_base_selector"
        app:layout_constraintEnd_toStartOf="@+id/button_base_selector"
        app:layout_constraintStart_toStartOf="@id/text_view_news_label"
        app:layout_constraintTop_toTopOf="@id/button_base_selector"
        app:shapeAppearanceOverlay="@style/AmountBoxShape">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:hint="@string/amount_0_00"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_base_selector"
        style="@style/SelectorButton"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        tools:text="@string/azn"
        app:icon="@drawable/ic_round_keyboard_arrow_down_24"
        app:iconGravity="end"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/text_view_news_label"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/SelectorButtonShape" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_target_amount"
        style="@style/AmountBox"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@id/button_target_selector"
        app:layout_constraintEnd_toStartOf="@+id/button_target_selector"
        app:layout_constraintStart_toStartOf="@id/input_layout_base_amount"
        app:layout_constraintTop_toTopOf="@id/button_target_selector"
        app:shapeAppearanceOverlay="@style/AmountBoxShape">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/result"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_target_selector"
        style="@style/SelectorButton"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/default_padding"
        tools:text="@string/usd"
        app:icon="@drawable/ic_round_keyboard_arrow_down_24"
        app:iconGravity="end"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/button_base_selector"
        app:layout_constraintTop_toBottomOf="@id/button_base_selector"
        app:shapeAppearanceOverlay="@style/SelectorButtonShape" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_convert"
        style="@style/ConvertButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/convert"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@id/button_base_selector"
        app:layout_constraintStart_toStartOf="@id/input_layout_base_amount"
        app:layout_constraintTop_toBottomOf="@id/input_layout_target_amount" />

    <TextView
        android:id="@+id/text_view_news_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/news"
        android:textAppearance="@style/Label"
        app:layout_constraintTop_toBottomOf="@id/button_convert" />

    <TextView
        android:id="@+id/text_view_news_label_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_view_news_label"
        android:layout_marginHorizontal="@dimen/default_padding"
        android:textColor="@color/smoke_gray"
        android:text="@string/the_source_of_news"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_news"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:padding="@dimen/default_padding"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_news_label_description"
        tools:listitem="@layout/layout_item_news" />

</androidx.constraintlayout.widget.ConstraintLayout>